package Internal.bank;

public class PersonalCheckingInterestCalculator {
}
